--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <script src="roleChange.js" defer></script> <!-- script.js is for my website to be responsive-->
         <!--IMPORTANT: defer waits for all html elemnts to load, so js can run properly-->
         <script src="animatedBackground.js" defer></script>
+        <script src="animations.js" defer></script>
     </head>
     <body>
         <!--navbar-->
@@ -40,25 +41,27 @@
             <div class="projects-content">
                 <h1>Projects</h1>
                 <div class="project-list">
-                    <div id="list1">
+                    <div class="project-card">
                         <img src="assets/gaming hub.png" alt="">
                         <h1>Virtual Gaming Hub</h1>
                         <a href=""><button class="view-projects">View</button></a>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil, tenetur. Debitis velit veniam corrupti! Excepturi corporis, incidunt ad unde fuga quaerat. Sequi veritatis quisquam facilis non consectetur numquam minus hic.</p>
                     </div>
-                    <div id="list2">
+                    <div class="project-card">
                         <img src="assets/portfolio.png" alt="">
                         <h1>My Portfolio Website</h1>
                         <a href=""><button class="view-projects">View</button></a>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque non harum, sint placeat voluptates similique. Odit cumque rerum officia animi. Eum laborum quia facere voluptatibus veniam in ea corrupti facilis.</p>
                     </div>
-                    <div id="list3">
+                    <div class="project-card">
                         <img src="assets/car.jpg" alt="">
                         <h1>Mobile Business Card</h1>
                         <a href=""><button class="view-projects">View</button></a>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium temporibus eos tenetur odio, est similique, corrupti facilis mollitia adipisci blanditiis architecto libero reprehenderit doloremque repellendus quasi illum asperiores amet et!</p>
                     </div>
                 </div>
+            </div>
         </section>
+        <!-- experiences -->
     </body>
 </html>
